# remote-control-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/src/: index.html  main.js  preload.cjs  renderer.js  styles.css
apps/server/: Dockerfile  package.json
apps/server/src/: index.js
native-input-helper/: Cargo.toml
native-input-helper/src/: main.rs
native-mac-input-addon/src/: mac_input_addon.cc
scripts/: build-mac-input-addon.sh  enable-mac-screen-sharing.sh
