[package]
name = "native-input-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["highsierra"] }
